--- a/MegaDesk-Echegaray/MegaDesk-Echegaray/MegaDesk-Echegaray.csproj
+++ b/MegaDesk-Echegaray/MegaDesk-Echegaray/MegaDesk-Echegaray.csproj
@@ -121,5 +121,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="desk icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
