--- a/MegaDesk/MegaDesk/appsettings.json
+++ b/MegaDesk/MegaDesk/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MegaDeskContext": "Server=(localdb)\\mssqllocaldb;Database=MegaDeskContext-f86065e1-8d41-44f7-9066-69b24def7165;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
